deployment/dev/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "product-material-pass",
    "labels": {
      "name": "product-material-pass"
    }
  }
}
